--- a/TestDesignPatterns/TestDesignPatterns.csproj
+++ b/TestDesignPatterns/TestDesignPatterns.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractFactories\AbstractFactory.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Creator.cs" />
+    <Compile Include="Exchanges\Exchange.cs" />
+    <Compile Include="Exchanges\FuturesExchange.cs" />
+    <Compile Include="Exchanges\SecurityExchange.cs" />
     <Compile Include="Tradables\Derivatives\Derivative.cs" />
     <Compile Include="Tradables\Derivatives\Futures.cs" />
     <Compile Include="Markets\IMarket.cs" />
