--- a/TestDesignPatterns/TestDesignPatterns.csproj
+++ b/TestDesignPatterns/TestDesignPatterns.csproj
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractFactories\AbstractFactory.cs" />
+    <Compile Include="AbstractFactories\MarketFactory.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Builders\Builder.cs" />
     <Compile Include="Creator.cs" />
+    <Compile Include="Exchanges\CFDExchange.cs" />
     <Compile Include="Exchanges\Exchange.cs" />
     <Compile Include="Exchanges\FuturesExchange.cs" />
     <Compile Include="Exchanges\SecurityExchange.cs" />
