--- a/TestDesignPatterns/TestDesignPatterns.csproj
+++ b/TestDesignPatterns/TestDesignPatterns.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Exchanges\Exchange.cs" />
     <Compile Include="Exchanges\FuturesExchange.cs" />
     <Compile Include="Exchanges\SecurityExchange.cs" />
+    <Compile Include="Singleton\DerivedLogger.cs" />
+    <Compile Include="Singleton\Logger.cs" />
     <Compile Include="Tradables\CFD\CFD.cs" />
     <Compile Include="Tradables\Derivatives\Derivative.cs" />
     <Compile Include="Tradables\Derivatives\Futures.cs" />
@@ -65,6 +67,7 @@
     <Compile Include="Tradables\Securities\Security.cs" />
     <Compile Include="Tradables\Tradable.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
